--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "id": "ec88dcc8",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 1000000 vertices and 249964734 edges took 11.73 seconds.\n",
+      "Building property graph with 100000 vertices and 5001671 edges took 2.18 seconds.\n",
       "Property graph created with random node and edge attributes.\n",
       "Subgraph created with node and edge attributes successfully.\n"
      ]
@@ -227,56 +227,8 @@
     "import time\n",
     "\n",
     "ak.connect(\"n114\", 5555)\n",
-    "n = 100\n",
-    "m = 1000\n",
-    "s = 2\n",
-    "x = 2\n",
-    "y = 2\n",
     "p = 0.0005\n",
-    "num_nodes = 1_000_000\n",
-    "\n",
-    "# ### Build graph from randomly generated source and destination arrays.\n",
-    "# # 1. Use Arkouda's randint to generate the random edge arrays.\n",
-    "\n",
-    "# def create_random_directed_graph(num_nodes, p):\n",
-    "#     \"\"\"\n",
-    "#     Generates a random directed graph (Erdős-Rényi model) and returns the src and dst arrays.\n",
-    "    \n",
-    "#     Parameters:\n",
-    "#     num_nodes (int): Number of nodes in the graph.\n",
-    "#     p (float): Probability of creating an edge between two nodes.\n",
-    "    \n",
-    "#     Returns:\n",
-    "#     tuple: A tuple containing two lists (src, dst) representing the source and destination of each edge.\n",
-    "#     \"\"\"\n",
-    "#     # Create a random graph using Erdős–Rényi model\n",
-    "#     random_graph = nx.gnp_random_graph(num_nodes, p, seed=42, directed=True)\n",
-    "\n",
-    "#     # Extract src and dst arrays\n",
-    "#     src = [edge[0] for edge in random_graph.edges()]\n",
-    "#     dst = [edge[1] for edge in random_graph.edges()]\n",
-    "\n",
-    "#     return src, dst\n",
-    "\n",
-    "# print(\"Begining of Random Directed graph with P= \",p)\n",
-    "# src_rand, dst_rand = create_random_directed_graph(num_nodes, p)\n",
-    "# print(\"Random Directed graph created\")\n",
-    "\n",
-    "\n",
-    "# src = ak.array(src_rand)\n",
-    "# dst = ak.array(dst_rand)\n",
-    "\n",
-    "\n",
-    "# # 2. Build temporary property graph to get sorted edges and nodes lists.\n",
-    "# temp_prop_graph = ar.PropGraph()\n",
-    "# start = time.time()\n",
-    "# temp_prop_graph.add_edges_from(src, dst)\n",
-    "# end = time.time()\n",
-    "# build_time = end - start\n",
-    "\n",
-    "# print(f\"Building property graph with {len(temp_prop_graph)} vertices and \"\n",
-    "#         f\"{temp_prop_graph.size()} \"\n",
-    "#         f\"edges took {round(build_time,2)} seconds.\")\n",
+    "num_nodes = 100_000\n",
     "\n",
     "start = time.time()\n",
     "temp_prop_graph = ar.gnp(num_nodes, p, create_using=ar.PropGraph)\n",
@@ -311,7 +263,7 @@
     "node_bools = bool_choices[ak.randint(0, 2, num_nodes)]\n",
     "\n",
     "# For edges:\n",
-    "# 2.4. Randomly choose from [5, 10, 15]\n",
+    "# 2.4. Randomly choose from [5, 10]\n",
     "edge_choices = ak.array([5, 10])\n",
     "edge_vals = edge_choices[ak.randint(0, 2, num_edges)]\n",
     "\n",
@@ -393,7 +345,7 @@
     "                              relationship_columns=[\"rels1\"]\n",
     "                            )\n",
     "\n",
-    "Treat lbls1, lbls2, and lbls3 as node label attributes\n",
+    "# Treat lbls1, lbls2, and lbls3 as node label attributes\n",
     "subgraph.load_node_attributes(node_df_h, \n",
     "                              node_column=\"nodes\",\n",
     "                              label_columns=[\"lbls1\",\"lbls2\",\"lbls3\"])\n",
@@ -403,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "id": "c8af136f",
    "metadata": {},
    "outputs": [
@@ -425,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 36,
    "id": "4c90f39a",
    "metadata": {},
    "outputs": [
@@ -447,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 37,
    "id": "68667611",
    "metadata": {},
    "outputs": [
@@ -469,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 38,
    "id": "f6144d90",
    "metadata": {},
    "outputs": [
