vertex-based reordering

--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f651e065",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n115\", 5555)"
+    "ak.connect(\"n117\", 5555)"
    ]
   },
   {
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "0e3a275a",
    "metadata": {},
    "outputs": [],
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "f38fcded",
    "metadata": {},
    "outputs": [],
@@ -81,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
@@ -104,12 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "35198cf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 2.0 monos inside of the graph with reordering\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
+    "\"\"\"TEST COMBINED PICKER AND EDGE REORDERING ON SIMPLE GRAPH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                        \"value\":rels1_subgraph \n",
     "})\n",
@@ -132,15 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e309a93",
+   "execution_count": 20,
+   "id": "97029e51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph with reordering\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"TEST COMBINED PICKER ON SIMPLE GRAPH\"\"\"\n",
-    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
-    "                        \"value\":rels1_subgraph \n",
-    "})\n",
+    "\"\"\"TEST VERTEX PICKER AND VERTEX REORDERING ON SIMPLE GRAPH\"\"\"\n",
+    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph})\n",
     "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
     "                        \"color\":labels1_subgraph,\n",
     "                        \"value\":labels2_subgraph,\n",
@@ -154,18 +176,26 @@
     "\n",
     "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
     "                                           semantic_check = \"or\", algorithm_type = \"si\", \n",
-    "                                           reorder = False, return_isos_as = \"vertices\")\n",
-    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph without reordering\")"
+    "                                           reorder = True, return_isos_as = \"vertices\")\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with reordering\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "55313cfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 2.0 monos inside of the graph with VF2-PS\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\"TEST VF2-PS ON SIMPLE GRAPH\"\"\"\n",
+    "\"\"\"VF2-PS GROUND TRUTH\"\"\"\n",
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                        \"value\":rels1_subgraph \n",
     "})\n",
@@ -196,27 +226,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "ec88dcc8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building property graph with 100000 vertices and 5001671 edges took 2.18 seconds.\n",
-      "Property graph created with random node and edge attributes.\n",
-      "Subgraph created with node and edge attributes successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -355,18 +368,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "c8af136f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"si\", \n",
@@ -377,18 +382,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "4c90f39a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph,\n",
     "                                           semantic_check = \"and\", algorithm_type = \"si\",\n",
@@ -399,18 +396,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "68667611",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
@@ -421,18 +410,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "f6144d90",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We found 0.0 monos inside of the graph\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "isos_as_vertices = ar.subgraph_isomorphism(prop_graph, subgraph, \n",
     "                                           semantic_check = \"and\", algorithm_type = \"ps\", \n",
