--- a/arachne/subgraph_matching_with_random_graphs_sample.ipynb
+++ b/arachne/subgraph_matching_with_random_graphs_sample.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -17,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "671cb378",
    "metadata": {},
    "outputs": [
@@ -44,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "0e3a275a",
    "metadata": {},
    "outputs": [],
@@ -77,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "f38fcded",
    "metadata": {},
    "outputs": [],
@@ -89,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "9aa2b97c",
    "metadata": {},
    "outputs": [],
@@ -112,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "35198cf9",
    "metadata": {},
    "outputs": [
@@ -148,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "97029e51",
    "metadata": {},
    "outputs": [
@@ -182,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "55313cfc",
    "metadata": {},
    "outputs": [
@@ -199,6 +214,40 @@
     "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph,\n",
     "                        \"value\":rels1_subgraph \n",
     "})\n",
+    "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
+    "                        \"color\":labels1_subgraph,\n",
+    "                        \"value\":labels2_subgraph,\n",
+    "                        \"True?\":labels3_subgraph,\n",
+    "                        \"cats\":labels4_subgraph\n",
+    "})\n",
+    "\n",
+    "sg = ar.PropGraph()\n",
+    "sg.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\", convert_string_relationships_to_categoricals=False)\n",
+    "sg.load_node_attributes(node_df, node_column=\"nodes\", convert_string_labels_to_categoricals=False)\n",
+    "\n",
+    "isos_as_vertices = ar.subgraph_isomorphism(pg, sg, \n",
+    "                                           semantic_check = \"or\", algorithm_type = \"ps\", \n",
+    "                                           reorder = False, return_isos_as = \"vertices\")\n",
+    "print(f\"We found {len(isos_as_vertices[0])/len(sg)} monos inside of the graph with VF2-PS\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5a8c9225",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We found 4.0 monos inside of the graph with VF2-PS\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"VF2-PS GROUND TRUTH\"\"\"\n",
+    "edge_df = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph})\n",
     "node_df = ak.DataFrame({\"nodes\":ak.array(subgraph_nodes),\n",
     "                        \"color\":labels1_subgraph,\n",
     "                        \"value\":labels2_subgraph,\n",
