Oliver should fix the MotifCountingMsg.chpl

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "35c305f2",
    "metadata": {},
    "outputs": [
@@ -130,8 +130,10 @@
     "subgraph.load_node_attributes(node_df_h, node_column = \"nodes\", \n",
     "                                label_columns = [\"lbls1\",\"lbls2\"])\n",
     "\n",
-    "isos = ar.motif_counting(prop_graph, subgraph, \n",
-    "                                           semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "# isos = ar.motif_counting(prop_graph, subgraph, \n",
+    "#                                            semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "\n",
+    "isos = ar.motif_counting(prop_graph, 5)\n",
     "ak.shutdown()"
    ]
   },
