--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -31,6 +31,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -41,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 5 vertices and 6 edges took 1.67 seconds.\n"
+      "Building property graph with 5 vertices and 6 edges took 1.66 seconds.\n"
      ]
     }
    ],
@@ -131,7 +145,9 @@
     "                                label_columns = [\"lbls1\",\"lbls2\"])\n",
     "\n",
     "isos = ar.motif_counting(prop_graph, subgraph, \n",
-    "                                           semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "                                            semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "\n",
+    "# isos = ar.motif_counting(prop_graph, 5)\n",
     "ak.shutdown()"
    ]
   },
