--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -26,39 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "35c305f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building property graph with 5 vertices and 6 edges took 1.66 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -144,6 +115,186 @@
     "subgraph.load_node_attributes(node_df_h, node_column = \"nodes\", \n",
     "                                label_columns = [\"lbls1\",\"lbls2\"])\n",
     "\n",
+    "# isos = ar.motif_counting(prop_graph, subgraph, \n",
+    "isos = ar.motif_counting(prop_graph, subgraph, \n",
+    "                                            semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "\n",
+    "# isos = ar.motif_counting(prop_graph, 5)\n",
+    "ak.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "90ba6fc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building property graph with 393 vertices and 255 edges took 1.85 seconds.\n",
+      "Property graph created with random node and edge attributes.\n",
+      "Subgraph created with node and edge attributes successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import arkouda as ak\n",
+    "import arachne as ar\n",
+    "import scipy as sp\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "ak.connect(\"n64\", 5555)\n",
+    "p = 0.0005\n",
+    "num_nodes = 1_000\n",
+    "\n",
+    "start = time.time()\n",
+    "temp_prop_graph = ar.gnp(num_nodes, p, create_using=ar.PropGraph)\n",
+    "end = time.time()\n",
+    "build_time = end - start\n",
+    "\n",
+    "print(f\"Building property graph with {len(temp_prop_graph)} vertices and \"\n",
+    "        f\"{temp_prop_graph.size()} \"\n",
+    "        f\"edges took {round(build_time,2)} seconds.\")\n",
+    "\n",
+    "### Generate node labels and edge relationships for the graph.\n",
+    "# 1. Extract node and edge information.\n",
+    "num_edges = temp_prop_graph.size()\n",
+    "num_nodes = len(temp_prop_graph)\n",
+    "edges = temp_prop_graph.edges()\n",
+    "nodes = temp_prop_graph.nodes()\n",
+    "\n",
+    "##############################################\n",
+    "# NEW SECTION: Generate random node and edge attributes\n",
+    "##############################################\n",
+    "\n",
+    "# For nodes:\n",
+    "# 2.1. Categorical from [\"blue\", \"red\", \"yellow\"]\n",
+    "colors = ak.array([\"blue\", \"red\"])\n",
+    "node_colors = colors[ak.randint(0, len(colors), num_nodes)]\n",
+    "\n",
+    "# 2.2. Integer from 10 to 12 (inclusive)\n",
+    "node_ints = ak.randint(10, 12, num_nodes)\n",
+    "\n",
+    "# 2.3. Boolean from [False, True]\n",
+    "bool_choices = ak.array([False, True])\n",
+    "node_bools = bool_choices[ak.randint(0, 2, num_nodes)]\n",
+    "\n",
+    "# For edges:\n",
+    "# 2.4. Randomly choose from [5, 10]\n",
+    "edge_choices = ak.array([5, 10])\n",
+    "edge_vals = edge_choices[ak.randint(0, 2, num_edges)]\n",
+    "\n",
+    "##############################################\n",
+    "# Create dataframes with the new attributes\n",
+    "##############################################\n",
+    "\n",
+    "edge_df = ak.DataFrame({\n",
+    "    \"src\": edges[0],\n",
+    "    \"dst\": edges[1],\n",
+    "    \"edge_attr\": edge_vals\n",
+    "})\n",
+    "\n",
+    "node_df = ak.DataFrame({\n",
+    "    \"nodes\": nodes,\n",
+    "    \"color\": node_colors,\n",
+    "    \"int_attr\": node_ints,\n",
+    "    \"bool_attr\": node_bools\n",
+    "})\n",
+    "\n",
+    "##############################################\n",
+    "# Create the new property graph with these attributes\n",
+    "##############################################\n",
+    "\n",
+    "prop_graph = ar.PropGraph()\n",
+    "prop_graph.load_edge_attributes(\n",
+    "    edge_df, source_column=\"src\", destination_column=\"dst\", \n",
+    "    relationship_columns=[\"edge_attr\"]\n",
+    ")\n",
+    "\n",
+    "prop_graph.load_node_attributes(\n",
+    "    node_df, node_column=\"nodes\", \n",
+    "    label_columns=[\"color\", \"int_attr\", \"bool_attr\"]\n",
+    ")\n",
+    "\n",
+    "print(\"Property graph created with random node and edge attributes.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Create the subgraph we are searching for.\n",
+    "# 1. Create labels and relationships to search for.\n",
+    "src_list = [0, 1, 2, 1]\n",
+    "dst_list = [1, 2, 0, 3]\n",
+    "\n",
+    "src_subgraph = ak.array(src_list)\n",
+    "dst_subgraph = ak.array(dst_list)\n",
+    "\n",
+    "subgraph_nodes = list(set(src_list) | set(dst_list))\n",
+    "subgraph_nodes.sort()\n",
+    "\n",
+    "labels1_subgraph = ak.array([\"blue\", \"blue\", \"red\", \"red\"])\n",
+    "labels2_subgraph = ak.array([10, 11, 11, 10])\n",
+    "labels3_subgraph = ak.array([True, True, True, False])\n",
+    "\n",
+    "rels1_subgraph = ak.array([10, 10, 10, 5])\n",
+    "\n",
+    "subgraph = ar.PropGraph()\n",
+    "\n",
+    "# Include rels1_subgraph as an attribute for edges\n",
+    "edge_df_h = ak.DataFrame({\n",
+    "    \"src\": src_subgraph,\n",
+    "    \"dst\": dst_subgraph,\n",
+    "    \"rels1\": rels1_subgraph\n",
+    "})\n",
+    "\n",
+    "# Include the third label/attribute as well for nodes\n",
+    "node_df_h = ak.DataFrame({\n",
+    "    \"nodes\": ak.array(subgraph_nodes),\n",
+    "    \"lbls1\": labels1_subgraph,\n",
+    "    \"lbls2\": labels2_subgraph,\n",
+    "    \"lbls3\": labels3_subgraph\n",
+    "})\n",
+    "\n",
+    "# Now load the attributes into the subgraph\n",
+    "# Treat 'rels1' as an edge relationship attribute\n",
+    "subgraph.load_edge_attributes(edge_df_h, \n",
+    "                              source_column=\"src\", \n",
+    "                              destination_column=\"dst\",\n",
+    "                              relationship_columns=[\"rels1\"]\n",
+    "                            )\n",
+    "\n",
+    "# Treat lbls1, lbls2, and lbls3 as node label attributes\n",
+    "subgraph.load_node_attributes(node_df_h, \n",
+    "                              node_column=\"nodes\",\n",
+    "                              label_columns=[\"lbls1\",\"lbls2\",\"lbls3\"])\n",
+    "\n",
+    "print(\"Subgraph created with node and edge attributes successfully.\")\n",
+    "# isos = ar.motif_counting(prop_graph, subgraph, \n",
     "isos = ar.motif_counting(prop_graph, subgraph, \n",
     "                                            semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
