--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -114,7 +114,7 @@
     "subgraph.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
     "subgraph.load_node_attributes(node_df_h, node_column = \"nodes\", \n",
     "                                label_columns = [\"lbls1\",\"lbls2\"])\n",
-    "\n",
+    "print(\"motif_counting started ...\")\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, \n",
     "isos = ar.motif_counting(prop_graph, subgraph, \n",
     "                                            semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
@@ -125,24 +125,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "90ba6fc4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -154,9 +140,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 393 vertices and 255 edges took 1.85 seconds.\n",
+      "Building property graph with 9942 vertices and 24888 edges took 1.84 seconds.\n",
       "Property graph created with random node and edge attributes.\n",
-      "Subgraph created with node and edge attributes successfully.\n"
+      "Subgraph created with node and edge attributes successfully.\n",
+      "motif_counting started...\n",
+      "motif_counting took 2.26 seconds.\n"
      ]
     }
    ],
@@ -171,7 +159,7 @@
     "\n",
     "ak.connect(\"n64\", 5555)\n",
     "p = 0.0005\n",
-    "num_nodes = 1_000\n",
+    "num_nodes = 10_000\n",
     "\n",
     "start = time.time()\n",
     "temp_prop_graph = ar.gnp(num_nodes, p, create_using=ar.PropGraph)\n",
@@ -295,9 +283,15 @@
     "\n",
     "print(\"Subgraph created with node and edge attributes successfully.\")\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, \n",
+    "print(\"motif_counting started...\")\n",
+    "start = time.time()\n",
     "isos = ar.motif_counting(prop_graph, subgraph, \n",
     "                                            semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
+    "end = time.time()\n",
+    "build_time = end - start\n",
+    "print(f\"motif_counting \"\n",
+    "      f\"took {round(build_time,2)} seconds.\")\n",
     "# isos = ar.motif_counting(prop_graph, 5)\n",
     "ak.shutdown()"
    ]
