Adding patternToAdjMatrixAndEdges() + changes in MotifCountingMsg

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -26,10 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "35c305f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building property graph with 5 vertices and 6 edges took 1.68 seconds.\n",
+      "motif_counting started ...\n",
+      "motif_counting  took 0.06 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -92,41 +109,26 @@
     "                                relationship_columns=[\"rels1\", \"rels2\"])\n",
     "prop_graph.load_node_attributes(node_df, node_column=\"nodes\", label_columns=[\"lbls1\", \"lbls2\"])\n",
     "\n",
-    "### Create the subgraph we are searching for.\n",
-    "# 1. Create labels and relationships to search for.\n",
-    "src_list = [0, 1, 2, 2, 3]\n",
-    "dst_list = [1, 2, 0, 3, 0]\n",
-    "src_subgraph = ak.array(src_list)\n",
-    "dst_subgraph = ak.array(dst_list)\n",
-    "\n",
-    "subgraph_nodes = list(set(src_list) | set(dst_list))\n",
-    "subgraph_nodes.sort()\n",
-    "\n",
-    "labels1_subgraph = ak.array([\"lbl1\", \"lbl1\", \"lbl1\", \"lbl1\"])\n",
-    "labels2_subgraph = ak.array([\"lbl3\", \"lbl3\", \"lbl3\", \"lbl3\"])\n",
-    "rels1_subgraph = ak.array([\"rel1\", \"rel1\", \"rel1\", \"rel1\", \"rel1\"])\n",
-    "rels2_subgraph = ak.array([\"rel3\", \"rel3\", \"rel3\", \"rel3\", \"rel3\"])\n",
-    "\n",
-    "subgraph = ar.PropGraph()\n",
-    "edge_df_h = ak.DataFrame({\"src\":src_subgraph, \"dst\":dst_subgraph})\n",
-    "node_df_h = ak.DataFrame({\"nodes\": ak.array(subgraph_nodes), \"lbls1\":labels1_subgraph,\n",
-    "                          \"lbls2\":labels2_subgraph})\n",
-    "subgraph.load_edge_attributes(edge_df_h, source_column=\"src\", destination_column=\"dst\")\n",
-    "subgraph.load_node_attributes(node_df_h, node_column = \"nodes\", \n",
-    "                                label_columns = [\"lbls1\",\"lbls2\"])\n",
     "print(\"motif_counting started ...\")\n",
-    "# isos = ar.motif_counting(prop_graph, subgraph, \n",
-    "isos = ar.motif_counting(prop_graph, subgraph, \n",
-    "                                            semantic_check=\"or\", algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "start = time.time()\n",
     "\n",
+    "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
+    "isos = ar.motif_counting(prop_graph, 5, \n",
+    "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "\n",
+    "end = time.time()\n",
+    "exec_time = end - start\n",
+    "print(f\"motif_counting \"\n",
+    "\n",
+    "        f\" took {round(exec_time,2)} seconds.\")\n",
     "# isos = ar.motif_counting(prop_graph, 5)\n",
     "ak.shutdown()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "90ba6fc4",
+   "execution_count": 10,
+   "id": "c6537651",
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +142,154 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building property graph with 9942 vertices and 24888 edges took 1.84 seconds.\n",
-      "Property graph created with random node and edge attributes.\n",
-      "Subgraph created with node and edge attributes successfully.\n",
-      "motif_counting started...\n",
-      "motif_counting took 2.26 seconds.\n"
+      "Number of nodes: 688\n",
+      "Number of edges: 1079\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.68 seconds.\n",
+      "motif_counting started ...\n",
+      "motif_counting  took 42.52 seconds.\n",
+      "isos =  (array([0 0 0 0]), array([0 0 0 0]))\n"
      ]
     }
    ],
+   "source": [
+    "import arkouda as ak\n",
+    "import arachne as ar\n",
+    "import scipy as sp\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "ak.connect(\"n64\", 5555)\n",
+    "n = 100\n",
+    "m = 1000\n",
+    "s = 2\n",
+    "x = 2\n",
+    "y = 2\n",
+    "\n",
+    "def read_graph_to_arkouda(file_path: str):\n",
+    "    \"\"\"\n",
+    "    Reads a directed graph from a file and converts it into Arkouda arrays.\n",
+    "\n",
+    "    Parameters:\n",
+    "        file_path (str): Path to the graph file.\n",
+    "\n",
+    "    Returns:\n",
+    "        Tuple[ak.pdarray, ak.pdarray, int]: Tuple containing src Arkouda array, dst Arkouda array, and number of nodes.\n",
+    "    \"\"\"\n",
+    "    src_list = []\n",
+    "    dst_list = []\n",
+    "\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        # Read the first line to get the number of nodes\n",
+    "        num_nodes_line = f.readline()\n",
+    "        try:\n",
+    "            num_nodes = int(num_nodes_line.strip())\n",
+    "        except ValueError:\n",
+    "            raise ValueError(f\"Invalid number of nodes: '{num_nodes_line.strip()}'\")\n",
+    "\n",
+    "        # Read the remaining lines for edges\n",
+    "        for line_number, line in enumerate(f, start=2):\n",
+    "            # Skip empty lines\n",
+    "            if not line.strip():\n",
+    "                continue\n",
+    "\n",
+    "            parts = line.strip().split('\\t')\n",
+    "            if len(parts) != 2:\n",
+    "                print(f\"Warning: Skipping malformed line {line_number}: '{line.strip()}'\")\n",
+    "                continue\n",
+    "\n",
+    "            try:\n",
+    "                src, dst = map(int, parts)\n",
+    "            except ValueError:\n",
+    "                print(f\"Warning: Non-integer values on line {line_number}: '{line.strip()}'\")\n",
+    "                continue\n",
+    "\n",
+    "            src_list.append(src)\n",
+    "            dst_list.append(dst)\n",
+    "\n",
+    "    # Convert to Arkouda arrays\n",
+    "    ak_src = ak.array(src_list)\n",
+    "    ak_dst = ak.array(dst_list)\n",
+    "\n",
+    "    return ak_src, ak_dst, num_nodes\n",
+    "\n",
+    "# Define the file path\n",
+    "file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
+    "\n",
+    "# Display the results\n",
+    "print(f\"Number of nodes: {num_nodes}\")\n",
+    "print(f\"Number of edges: {src.size}\")\n",
+    "### Build graph from randomly generated source and destination arrays.\n",
+    "# 1. Use Arkouda's randint to generate the random edge arrays.\n",
+    "\n",
+    "#src = ak.array([1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10])\n",
+    "#dst = ak.array([0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4])#\n",
+    "# \n",
+    "# src = ak.array([0, 1,2,2,3,4])\n",
+    "# dst = ak.array([1, 2,0,3,4,2])\n",
+    "\n",
+    "# 2. Build temporary property graph to get sorted edges and nodes lists.\n",
+    "temp_prop_graph = ar.PropGraph()\n",
+    "start = time.time()\n",
+    "temp_prop_graph.add_edges_from(src, dst)\n",
+    "end = time.time()\n",
+    "build_time = end - start\n",
+    "print(f\"Building property graph with {len(temp_prop_graph)} vertices and \"\n",
+    "        f\"{temp_prop_graph.size()} \"\n",
+    "        f\"edges took {round(build_time,2)} seconds.\")\n",
+    "\n",
+    "### Generate node labels and edge relationships for the graph.\n",
+    "# 1. Extract node and edge information.\n",
+    "num_edges = temp_prop_graph.size()\n",
+    "num_nodes = len(temp_prop_graph)\n",
+    "edges = temp_prop_graph.edges()\n",
+    "nodes = temp_prop_graph.nodes()\n",
+    "\n",
+    "# 2. Generate sets of node labels and edge relationships.\n",
+    "labels_set = ak.array([\"lbl\" + str(x) for x in range(1,x+1)])\n",
+    "relationships_set = ak.array([\"rel\" + str(y) for y in range(1,y+1)])\n",
+    "\n",
+    "# 3. Give edges and nodes same exact labels and relationships.\n",
+    "node_labels_1 = ak.full(num_nodes, labels_set[0])\n",
+    "node_labels_2 = ak.full(num_nodes, labels_set[1])\n",
+    "edge_rels_1 = ak.full(num_edges, relationships_set[0])\n",
+    "edge_rels_2 = ak.full(num_edges, relationships_set[1])\n",
+    "\n",
+    "# 4. Create dataframe to load into a new property graph.\n",
+    "edge_df = ak.DataFrame({\"src\":edges[0], \"dst\":edges[1], \"rels1\":edge_rels_1, \"rels2\":edge_rels_2})\n",
+    "node_df = ak.DataFrame({\"nodes\":nodes, \"lbls1\":node_labels_1, \"lbls2\":node_labels_2})\n",
+    "\n",
+    "# 5. Create new property graph with node labels and edge relationships.\n",
+    "prop_graph = ar.PropGraph()\n",
+    "prop_graph.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\",\n",
+    "                                relationship_columns=[\"rels1\", \"rels2\"])\n",
+    "prop_graph.load_node_attributes(node_df, node_column=\"nodes\", label_columns=[\"lbls1\", \"lbls2\"])\n",
+    "\n",
+    "print(\"motif_counting started ...\")\n",
+    "start = time.time()\n",
+    "\n",
+    "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
+    "isos = ar.motif_counting(prop_graph, 4, \n",
+    "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
+    "\n",
+    "end = time.time()\n",
+    "exec_time = end - start\n",
+    "print(f\"motif_counting \"\n",
+    "\n",
+    "        f\" took {round(exec_time,2)} seconds.\")\n",
+    "print(\"isos = \", isos)\n",
+    "# isos = ar.motif_counting(prop_graph, 5)\n",
+    "ak.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90ba6fc4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
