Enumerate() has problem with number of threads>1.

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -110,30 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c6537651",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of nodes: 688\n",
-      "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.71 seconds.\n",
-      "motif_counting started ...\n",
-      "motif_counting  took 516.7 seconds.\n",
-      "isos =  (array([0 0 0 0]), array([0 0 0 0]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -250,7 +230,7 @@
     "                                relationship_columns=[\"rels1\", \"rels2\"])\n",
     "prop_graph.load_node_attributes(node_df, node_column=\"nodes\", label_columns=[\"lbls1\", \"lbls2\"])\n",
     "\n",
-    "print(\"motif_counting started ...\")\n",
+    "print(\"motif_counting started for yeast...\")\n",
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
