EnumerateChunkBase() idea added

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -39,7 +39,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n64\", 5555)\n",
+    "ak.connect(\"n120\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -127,9 +127,9 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.57 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.58 seconds.\n",
       "motif_counting started for yeast...\n",
-      "motif_counting  took 55.48 seconds.\n",
+      "motif_counting for yeast took 181.91 seconds.\n",
       "isos =  (array([0 0 0 0]), array([0 0 0 0]))\n"
      ]
     }
@@ -143,7 +143,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n64\", 5555)\n",
+    "ak.connect(\"n120\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -259,7 +259,7 @@
     "\n",
     "end = time.time()\n",
     "exec_time = end - start\n",
-    "print(f\"motif_counting \"\n",
+    "print(f\"motif_counting for yeast\"\n",
     "\n",
     "        f\" took {round(exec_time,2)} seconds.\")\n",
     "print(\"isos = \", isos)\n",
