--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -26,10 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "35c305f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building property graph with 5 vertices and 6 edges took 1.6 seconds.\n",
+      "motif_counting started ...\n",
+      "motif_counting  took 0.07 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -39,7 +56,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n120\", 5555)\n",
+    "ak.connect(\"n33\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -96,7 +113,7 @@
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 3, \n",
+    "isos = ar.motif_counting(prop_graph, 4, \n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
@@ -110,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -127,9 +144,9 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.58 seconds.\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.59 seconds.\n",
       "motif_counting started for yeast...\n",
-      "motif_counting for yeast took 181.91 seconds.\n",
+      "motif_counting for yeast took 37.57 seconds.\n",
       "isos =  (array([0 0 0 0]), array([0 0 0 0]))\n"
      ]
     }
@@ -143,7 +160,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n120\", 5555)\n",
+    "ak.connect(\"n33\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
