--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -26,27 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "35c305f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building property graph with 5 vertices and 6 edges took 1.6 seconds.\n",
-      "motif_counting started ...\n",
-      "motif_counting  took 0.07 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -127,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -142,11 +125,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 688\n",
-      "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.69 seconds.\n",
+      "Number of nodes: 100000\n",
+      "Number of edges: 4995648\n",
+      "Building property graph with 100000 vertices and 4995648 edges took 2.08 seconds.\n",
       "motif_counting started for yeast...\n",
-      "motif_counting for yeast took 0.07 seconds.\n",
+      "motif_counting for yeast took 412.43 seconds.\n",
       "isos =  (array([0 0 0 0]), array([0 0 0 0]))\n"
      ]
     }
@@ -160,7 +143,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n33\", 5555)\n",
+    "ak.connect(\"n47\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -215,7 +198,8 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "# file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
     "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
     "\n",
     "# Display the results\n",
@@ -271,7 +255,7 @@
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 4, \n",
+    "isos = ar.motif_counting(prop_graph, 3, \n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
